--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bridge-food-connect",
+  "name": "bridge-food-connect-2025",
   "version": "1.0.0",
   "description": "Full-stack application for connecting food donors with recipients to reduce food waste",
   "main": "index.js",
